--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -682,14 +682,13 @@ en:
     gateway:
       index:
         dfe_signin:
-          create_account_html: If your school is on the <a href="%{gias_url}" aria-label="Get Information About Schools register">Get Information About Schools (GIAS) register</a> you should be able to get a DfE Sign-in account.
-          instructions: Sign in to your DfE Sign-In account to use this service. You will be automatically directed back to this service once you’ve signed in.
+          create_account_html: You can <a href="%{get_signin_url}">get a DfE Sign-in account</a> if your school is on the <a href="%{gias_url}" aria-label="Get Information About Schools register">Get Information About Schools (GIAS) register</a>.
           find_more_info_html: Find more information about the <a href="%{terms_url}">terms and conditions of the DfE Sign-in account</a>.
+          instructions: To use this service you need to sign in with your DfE Sign-in account.
           not_for_profit_html: Only not-for-profit and schools with charitable status are able to get access to the online and offline version of the service.
           outside_england_html: Outside of England, not-for-profit and schools with charitable status cannot yet use the online agency selection service. They can <a href="%{url}" aria-label="Crown Commercial Service contact form">request access to an offline version</a> (an Excel spreadsheet) by putting 'offline agency selection tool’ in the comments box.
-          create_dfe_signin_link: Create a DfE Sign-in account
         heading: CCS Marketplace - Find supply teachers and agency workers
-        subheading: Not got a Sign-in account?
+        subheading: If you don’t have a DfE Sign-in account
     home:
       fta_to_perm_fee:
         avoid_fee: To avoid this fee you can hire the worker permanently 6 months after current contract with you ends.
@@ -726,7 +725,7 @@ en:
         you_cant_use_the_service_if: You can’t use this service if you’re an independent school, unless you have charitable status.
         you_must_tell_your_employees: You must tell your employees of the confidential nature of the information and must also agree to the requirements. No agents, sub-contractors, third parties nor other non-employees can have access to the confidential information.
         you_will_need_to_have: 'You will need to have:'
-        you_will_need_your_dfe_sign_in: To use the service, you will need your DFE Sign-in email and password. If you don’t have one you may be able to get one, or to access an offline version of the service.
+        you_will_need_your_dfe_sign_in_html: your DfE Sign-in email address and password. If you don’t have an account, you can <a href="%{get_dfe_url}">get a DfE Sign-in account</a> if your school is on the <a href="%{get_schools_info_url}">Get Information About Schools (GIAS) register</a>
         your_schools_postcode: your school’s postcode
       temp_to_perm_fee:
         after_12_weeks_and_enough_notice: Based on the information you provided, you’re taking the worker on after 12 working weeks and giving 4 working weeks’ notice, so you can’t be charged a fee under this deal.
