--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,10 @@ en:
           attributes:
             value_band:
               inclusion: Select a value band to see a list of suppliers
+        legal_services/journey/check_suitability:
+          attributes:
+            legal_services:
+              inclusion: Select a legal service
         legal_services/journey/check_suitability3:
           attributes:
             lot:
